fixed issue with list spacing

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -21,6 +21,13 @@
     align-content: center;
   }
 
+  &-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
   &-heading {
     text-align: center;
     text-transform: uppercase;
